@@ -54,12 +54,12 @@ import javax.swing.JSeparator;
 import javax.swing.SpringLayout;
 import javax.swing.SwingConstants;
 
-import megamek.client.ui.dialogs.abstractDialogs.ASConversionInfoDialog;
 import megamek.client.ui.clientGUI.calculationReport.FlexibleCalculationReport;
+import megamek.client.ui.dialogs.abstractDialogs.ASConversionInfoDialog;
 import megamek.client.ui.util.SpringUtilities;
 import megamek.client.ui.util.UIUtil;
-import megamek.common.Entity;
-import megamek.common.ForceAssignable;
+import megamek.common.units.Entity;
+import megamek.common.interfaces.ForceAssignable;
 import megamek.common.alphaStrike.AlphaStrikeElement;
 import megamek.common.alphaStrike.conversion.ASConverter;
 import megamek.common.annotations.Nullable;
@@ -226,8 +226,8 @@ public class ASStatsTablePanel implements ActionListener {
     /** returns the list of elements in the panel, sorted in the same way they are displayed */
     public List<AlphaStrikeElement> getSortedElements() {
         return groups.stream()
-                     .flatMap(group -> group.elements.stream().sorted(aseTableComparator))
-                     .collect(Collectors.toList());
+              .flatMap(group -> group.elements.stream().sorted(aseTableComparator))
+              .collect(Collectors.toList());
     }
 
     /** remove and rebuild the table grid */
@@ -248,8 +248,8 @@ public class ASStatsTablePanel implements ActionListener {
         addGroupHeaders(group);
 
         for (AlphaStrikeElement element : group.elements.stream()
-                                                .sorted(aseTableComparator)
-                                                .collect(Collectors.toList())) {
+              .sorted(aseTableComparator)
+              .toList()) {
             boolean oddRow = (rows++ % 2) == 1;
             addGridElementLeftAlign(element.getName(), oddRow);
             addGridElement(element.getASUnitType() + "", oddRow);
@@ -330,7 +330,7 @@ public class ASStatsTablePanel implements ActionListener {
     }
 
     /** add a header button that connects to the <code>sort</code> of an AlphaStrikeElementComparator */
-    private JButton addSortableHeader(AlphaStrikeElementComparator comparator) {
+    private void addSortableHeader(AlphaStrikeElementComparator comparator) {
         var button = new JButton(comparator.getLabel());
         button.addActionListener(this);
         button.setForeground(comparator.sort == 0 ? HEADER_COLOR : SORTED_HEADER_COLOR);
@@ -338,24 +338,23 @@ public class ASStatsTablePanel implements ActionListener {
         button.setToolTipText("Click to sort by " + comparator.name);
         panel.add(button);
         buttonMap.put(button, comparator);
-        return button;
     }
 
     private String getArcedSpecials(AlphaStrikeElement element) {
         return "<HTML>" +
-                     element.getSpecialsDisplayString(element) +
-                     "<BR>FRONT(" +
-                     element.getFrontArc().getSpecialsExportString(", ", element) +
-                     ")" +
-                     "<BR>LEFT(" +
-                     element.getLeftArc().getSpecialsExportString(", ", element) +
-                     ")" +
-                     "<BR>RIGHT(" +
-                     element.getRightArc().getSpecialsExportString(", ", element) +
-                     ")" +
-                     "<BR>REAR(" +
-                     element.getRearArc().getSpecialsExportString(", ", element) +
-                     ")";
+              element.getSpecialsDisplayString(element) +
+              "<BR>FRONT(" +
+              element.getFrontArc().getSpecialsExportString(", ", element) +
+              ")" +
+              "<BR>LEFT(" +
+              element.getLeftArc().getSpecialsExportString(", ", element) +
+              ")" +
+              "<BR>RIGHT(" +
+              element.getRightArc().getSpecialsExportString(", ", element) +
+              ")" +
+              "<BR>REAR(" +
+              element.getRearArc().getSpecialsExportString(", ", element) +
+              ")";
     }
 
     private void addVerticalSpace() {
@@ -367,7 +366,7 @@ public class ASStatsTablePanel implements ActionListener {
 
     private void addElementHeaders() {
         rows++;
-        aseTableComparator.comparatorList.stream().forEach(mc -> addSortableHeader(mc));
+        aseTableComparator.comparatorList.forEach(this::addSortableHeader);
         addHeader("Specials");
         addHeader("Conversion");
         addLine();
@@ -386,7 +385,7 @@ public class ASStatsTablePanel implements ActionListener {
         }
     }
 
-    /** Adds a line of JSeperators to the panel. The additional strut is required for the line to show. */
+    /** Adds a line of JSeparators to the panel. The additional strut is required for the line to show. */
     private void addLine() {
         rows++;
         for (int col = 0; col < COLUMNS; col++) {
@@ -400,12 +399,15 @@ public class ASStatsTablePanel implements ActionListener {
 
     @Override
     public void actionPerformed(ActionEvent e) {
-        if (buttonMap.containsKey(e.getSource())) {
-            JButton button = (JButton) e.getSource();
-            AlphaStrikeElementComparator comparator = buttonMap.get(button);
-            comparator.toggleSort();
-            button.setText(comparator.getLabel());
-            rebuildPanel();
+        Object source = e.getSource();
+        if (source instanceof JButton button) {
+            if (buttonMap.containsKey(button)) {
+                AlphaStrikeElementComparator comparator = buttonMap.get(button);
+                comparator.toggleSort();
+                button.setText(comparator.getLabel());
+                rebuildPanel();
+            }
+
         }
     }
 
@@ -436,10 +438,10 @@ public class ASStatsTablePanel implements ActionListener {
     }
 
     /** Extend this class to create a comparator triggered by a button */
-    private abstract class AlphaStrikeElementComparator implements Comparator<AlphaStrikeElement> {
+    private abstract static class AlphaStrikeElementComparator implements Comparator<AlphaStrikeElement> {
         // 0 is do not sort, 1 is sort, -q is reverse sort
         private int sort = 0;
-        private String name;
+        private final String name;
 
         AlphaStrikeElementComparator(String name) {
             this.name = name;
@@ -458,7 +460,7 @@ public class ASStatsTablePanel implements ActionListener {
      * Orderable, optional sorting criteria for AlphaStrikeElements. Execute sorts in order of
      * <code>comparatorList</code>
      */
-    private class ASETableComparator implements Comparator<AlphaStrikeElement> {
+    private static class ASETableComparator implements Comparator<AlphaStrikeElement> {
         //sort criteria: 1 is sort, 0 is do not sort, -1 is reverse sort
         private final List<AlphaStrikeElementComparator> comparatorList = new ArrayList<>();
 
